--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.5",
+    "bootstrap": "^5.3.0",
     "moment": "^2.29.4",
     "notyf": "^3.10.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.10.1",
