--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios-mock-adapter": "^1.21.5",
     "bootstrap": "^5.3.0",
     "moment": "^2.29.4",
+    "nanoid": "^4.0.2",
     "notyf": "^3.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
